# AutoPPTMaker

./: .gitignore  Auto PPT Maker Instructions.docx  ExcelLookup.py  GoogleAPITools.py  HymnDatabase.db  HymnMaker.py  ListMaker.py  Logging.py  LookupTools.py  PPTConfigurator.xlsx  PPTEditorTools.py  ProjectedSlideProperties.ini  README.md  RegularSlideProperties.ini  SlideIDList.txt  SlideInputs.ini  SlideMaker.py  StreamSlideProperties.ini  TODO.txt  Utility.py  VerseMaker.py  WebLookupTools.py  credentials.json  pyproject.toml  token.json  token.pickle
AutoPPTMaker/: CSVMaker.py  GoogleAPITools.py  HymnMaker.py  ListMaker.py  Logging.py  LookupTools.py  SlideInputs.ini  SlideMaker.py  VerseMaker.py
AutoPPTMaker/Data/: GlobalProperties - FCNABC.ini  GlobalProperties - Other.ini  HymnDatabase.db  ProjectedSlideProperties.ini  RegularSlideProperties.ini  StreamSlideProperties.ini
Data/: GlobalProperties.ini  HymnDatabase.db  ProjectedSlideProperties.ini  RegularSlideProperties.ini  SlideIDList.txt  StreamSlideProperties.ini
SQL/: CREATE_TABLE_HYMN.sql  HymnDatabase.db  Lyrics.txt  SQLInsert.py
SlideProperties/: RegularSlideProperties.ini
Source Slides/: Source Worship Slide - Projected.pptx  Source Worship Slide - Regular.pptx
SourceSlides/: SlideMaker SpreadSheet.xlsx  Source Worship Slide - Stream.pptx
