[tool.poetry]
name = "AutoPPTMaker"
version = "2.1.0"
description = "Automated worship slide creator for FCNABC's English Congregation."
authors = ["David <djing123@icloud.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <=3.10"
lyrics-extractor = "^3.0.1"
google-api-python-client = "^2.42.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.1"
pyinstaller = "^4.10"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
pytz = "^2022.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
