[tool.poetry]
name = "AutoPPTMaker"
version = "2.4.0"
description = "Automated worship slide creator for FCNABC's English Congregation."
authors = ["David <djing123@icloud.com>"]

[tool.poetry.dependencies]
python = "~3.11"
google-api-python-client = "^2.158.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
pyinstaller = "^6.11.1"
numpy = "^1.26.4"
matplotlib = "~3.7.5"
pytz = "^2024.2"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
